added link to psychic game in portfolio section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Andreina's Portfoilo Website</title>
@@ -71,17 +72,17 @@
             <ul>
                 <li>
                     <a href="https://github.com/coolcaliente" target="_blank">
-                        <img src="./assets/images/github-logo.png" alt="GitHub Logo" width="65px" />
+                        <img src="./assets/images/github-logo.png" alt="GitHub Logo" />
                     </a>
                 </li>
                 <li class="socialMediaPadding">
                     <a href="https://www.linkedin.com/in/andreina-keller-443295b0/" target="_blank">
-                        <img src="./assets/images/linkedin-logo.png" alt="LinkedIn Logo" width="65px" />
+                        <img src="./assets/images/linkedin-logo.png" alt="LinkedIn Logo" />
                     </a>
                 </li>
                 <li>
                     <a href="https://stackoverflow.com/users/9156521/coolcaliente" target="_blank">
-                        <img src="./assets/images/stackoverflow-logo.png" alt="Stackoverflow Logo" width="65px" />
+                        <img src="./assets/images/stackoverflow-logo.png" alt="Stackoverflow Logo" />
                     </a>
                 </li>
             </ul>
