--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,8 @@
             <h2>Portfolio</h2>
             <hr>
                 <div class="entryContainer left leftPortfolio">
-                    <img class="" src="http://via.placeholder.com/280x170" alt="Andreina's self portrait illustration">
-                    <h4 class="conteredText">Hangman</h4>
+                    <a href="https://coolcaliente.github.io/psychic-game/"><img class="" src="http://via.placeholder.com/280x170" alt="Andreina's self portrait illustration">
+                    <h4 class="conteredText">Psychic Game</h4></a>
                 </div>
 
                 <div class="entryContainer left">
