--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
                 </div>
 
                 <div class="entryContainer left">
-                    <img class="" src="http://via.placeholder.com/280x170" alt="Andreina's self portrait illustration">
-                    <h4 class="conteredText">RPG Game</h4>
+                    <a href="https://coolcaliente.github.io/week-4-game"><img class="" src="http://via.placeholder.com/280x170" alt="Andreina's self portrait illustration">
+                    <h4 class="conteredText">Crystal Collector</h4></a>
                 </div>  
 
                 <div class="entryContainer left leftPortfolio">
