--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,8 @@
                 </div>  
 
                 <div class="entryContainer left leftPortfolio">
-                    <img class="" src="http://via.placeholder.com/280x170" alt="Andreina's self portrait illustration">
-                    <h4 class="conteredText">Trivia Game</h4>
+                    <a href="https://coolcaliente.github.io/TriviaGame/"><img class="" src="http://via.placeholder.com/280x170" alt="Andreina's self portrait illustration">
+                    <h4 class="conteredText">Trivia Game</h4></a>
                 </div>
     
                 <div class="entryContainer left">
